--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /assignment/nbproject/private/
+/Q1_12/nbproject/private/
+/Q1_12/build/
+/test_thu/nbproject/private/
+/test_thu/build/
+/test_1/nbproject/private/
+/test_1/build/
